# claude-swarm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_swarm/: __init__.py  _paths.py  abort.py  agents.py  autoresearch_ingest.py  bus.py  conductor.py  coord_bus_adapter.py  cost.py  github_tasks.py  governor.py  kanban.py  merge_pipeline.py  messaging.py  meta_supervisor.py  perpetual.py  postgres_bus.py  resilience.py  reviewer_checkpoint.py  roles.py  routing.py  supervisor.py  usage.py  workflow.py  worktree.py
claude_swarm/cli/: __init__.py  main.py  scenario.py
claude_swarm/conductors/: __init__.py  api.py  env.py  factory.py  sdk.py
claude_swarm/heads/: __init__.py
claude_swarm/scenarios/: __init__.py
docs/: AGENT_SWARM_COMPLETION_PLAN.md  AUTONOMY_ARCHITECTURE.md
docs/launchd/: README.md  com.kushal.claude-swarm-perpetual.plist.template
examples/doc_writer_team/: README.md  run.py
examples/todo_app/: README.md  run.py
scripts/: swarm_dashboard.py  try-swarm.sh
tests/: conftest.py  test_abort.py  test_agents.py  test_autoresearch_ingest.py  test_bus.py  test_cli.py  test_cli_usage.py  test_conductor.py  test_conductor_api.py  test_conductor_factory.py  test_conductor_sdk.py  test_coord_bus_adapter.py  test_cost.py  test_examples.py  test_github_tasks.py  test_governor.py  test_heads.py  test_kanban.py  test_launchd_template.py  test_messaging.py  test_meta_supervisor.py  test_perpetual.py  test_postgres_bus.py  test_resilience.py  test_reviewer_checkpoint.py  test_roles.py  test_routing.py  test_supervisor.py  test_usage.py  test_workflow.py  test_worktree.py
tests/scenarios/: README.md  __init__.py  run_scenario.py  test_scenarios.py
tests/scenarios/fixtures/abort-marker-test/: README.txt
tests/scenarios/fixtures/audit-then-fix/src/: buggy_01.py  buggy_02.py  buggy_03.py  clean.py
tests/scenarios/fixtures/conflict-resolution-drill/: shared.py
tests/scenarios/fixtures/doc-writer-team/src/: alpha.py  beta.py  delta.py  epsilon.py  gamma.py
tests/scenarios/fixtures/multi-file-rename/: manifest.json
tests/scenarios/fixtures/multi-file-rename/files/: mod01.py  mod02.py  mod03.py  mod04.py  mod05.py  mod06.py  mod07.py  mod08.py  mod09.py  mod10.py
tests/scenarios/fixtures/multi-language-port/: README.txt
tests/scenarios/fixtures/multi-team-coordination/: README.txt
tests/scenarios/fixtures/respawn-on-crash/: README.txt
tests/scenarios/fixtures/scan-build-review/sample/: feature_01.txt  feature_02.txt  feature_03.txt  feature_04.txt  feature_05.txt
tests/scenarios/fixtures/spec-impl-pair/: README.txt
tests/scenarios/runner/: __init__.py  assertions.py  harness.py  stub.py
tests/scenarios/scenarios/: abort-marker-test.json  audit-then-fix.json  conflict-resolution-drill.json  doc-writer-team.json  multi-file-rename.json  multi-language-port.json  multi-team-coordination.json  respawn-on-crash.json  scan-build-review.json  spec-impl-pair.json
tests/scenarios/schema/: scenario.schema.json
